--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -9,8 +9,9 @@ set(CMAKE_AUTOMOC ON)
 set(CMAKE_AUTORCC ON)
 
 add_library(project_config INTERFACE)
-set(CMAKE_CXX_STANDARD 17)
-set(CMAKE_CXX_STANDARD_REQUIRED ON)
+target_compile_features(project_config INTERFACE
+    cxx_std_20
+)
 target_compile_definitions(project_config INTERFACE
     QT_NO_CAST_FROM_ASCII
     QT_NO_CAST_TO_ASCII
