Improve build system

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,23 +1,24 @@
-cmake_minimum_required(VERSION 3.13)
+cmake_minimum_required(VERSION 3.20)
 
 project(6502emu LANGUAGES CXX)
 
-set(CMAKE_INCLUDE_CURRENT_DIR ON)
+list(APPEND CMAKE_MODULE_PATH "${CMAKE_CURRENT_SOURCE_DIR}/cmake")
 
-set(CMAKE_AUTOUIC ON)
-set(CMAKE_AUTOMOC ON)
-set(CMAKE_AUTORCC ON)
+if (NOT CMAKE_BUILD_TYPE)
+    set(CMAKE_BUILD_TYPE "Debug" CACHE STRING "Choose the type of build" FORCE)
+    set_property(CACHE CMAKE_BUILD_TYPE PROPERTY STRINGS "Debug" "Release")
+endif()
+
+include(PreventInSourceBuilds)
+include(CompilerWarnings)
 
 add_library(project_config INTERFACE)
+set_compiler_warnings(project_config INTERFACE)
 target_compile_features(project_config INTERFACE
     cxx_std_20
 )
-target_compile_definitions(project_config INTERFACE
-    QT_NO_CAST_FROM_ASCII
-    QT_NO_CAST_TO_ASCII
-)
 
-find_package(Qt5 COMPONENTS Widgets LinguistTools Test REQUIRED)
+include(LoadQt5)
 
 add_subdirectory(src)
 add_subdirectory(tests)
