--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -7,7 +7,8 @@ macro(simple_test name)
     add_executable(test_${name} test_${name}.cpp)
     target_link_libraries(test_${name} PRIVATE
         project_config
-        6502emu
+        qt5_config
+        app
         Qt5::Test
     )
     source_group("" FILES test_${name}.cpp)
