Use a structure tree to reflect the board config file
This makes it possible to manage the board within the application
and simplifies loading and saving of the json file with the help of the
glaze json library.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -19,6 +19,7 @@ target_compile_features(project_config INTERFACE
 )
 
 include(LoadQt5)
+include(LoadGlaze)
 
 add_subdirectory(src)
 add_subdirectory(tests)
