--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -5,13 +5,13 @@ include_directories(
 
 macro(simple_test name)
     add_executable(test_${name} test_${name}.cpp)
+    configure_mocs(test_${name})
     target_link_libraries(test_${name} PRIVATE
         project_config
         qt5_config
         app
         Qt5::Test
     )
-    source_group("" FILES test_${name}.cpp)
     add_test(test_${name} test_${name})
 endmacro()
 
