Optimize LCD implementation

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,10 +1,9 @@
 add_library(ext STATIC "")
 
 target_sources(ext PRIVATE
+    impl/hd44780u_data.inl
     impl/hd44780u.cpp
     impl/hd44780u.h
-    impl/hd44780u_data.cpp
-    impl/hd44780u_data.h
     impl/m6502.cpp
     impl/m6502.h
     impl/m6522.cpp
